[BUGFIX] DatePicker unreadable when specific styling in Frontend
The dates cannot be read in the DatePicker when for example Zurb Foundation
is used in the frontend which contains specific table styles.
The white color was used too implicit in the respective styling.

Fixes: #55622
Releases: master, 1.0
Reviewed-on: https://review.typo3.org/28080
Tested-by: Karsten Dambekalns
Original-Commit-Hash: f4eaffadb52ecb57430798c8c518192dab878f87

--- a/TYPO3.Neos/Resources/Private/Styles/Inspector/Editors/_DateTimePicker.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/Inspector/Editors/_DateTimePicker.scss
@@ -141,7 +141,6 @@
 				&.neos-hour:hover,
 				&.neos-day:hover {
 					background-color: $blue;
-					color: #fff;
 					cursor: pointer;
 				}
 
@@ -167,7 +166,6 @@
 				&.neos-active.neos-disabled,
 				&.neos-active.neos-disabled:hover {
 					background-color: $blue;
-					color: $white;
 				}
 
 				&.neos-active:hover,
